// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NgJestConfig readTsConfig should return config including Angular compiler config with tsconfig as a string from ts-jest option 1`] = `
Object {
  "enableIvy": true,
  "esModuleInterop": true,
  "experimentalDecorators": true,
  "forceConsistentCasingInFileNames": true,
  "importHelpers": true,
  "importsNotUsedAsValues": 2,
  "lib": Array [
    "lib.esnext.d.ts",
    "lib.dom.d.ts",
  ],
  "module": 1,
  "noFallthroughCasesInSwitch": true,
  "noImplicitReturns": true,
  "noUnusedLocals": true,
  "noUnusedParameters": true,
  "skipLibCheck": true,
  "strict": true,
  "target": 1,
  "types": Array [
    "node",
    "jest",
  ],
}
`;

exports[`NgJestConfig readTsConfig should return config including Angular compiler config with tsconfig as an object from ts-jest option 1`] = `
Object {
  "enableIvy": true,
  "esModuleInterop": true,
  "experimentalDecorators": true,
  "forceConsistentCasingInFileNames": true,
  "importHelpers": true,
  "importsNotUsedAsValues": 2,
  "lib": Array [
    "lib.esnext.d.ts",
    "lib.dom.d.ts",
  ],
  "module": 1,
  "noFallthroughCasesInSwitch": true,
  "noImplicitReturns": true,
  "noUnusedLocals": true,
  "noUnusedParameters": true,
  "resolveJsonModule": true,
  "skipLibCheck": true,
  "strict": true,
  "target": 1,
  "types": Array [
    "node",
    "jest",
  ],
}
`;

exports[`NgJestConfig readTsConfig should return config including Angular compiler config without tsconfig defined in ts-jest option 1`] = `
Object {
  "enableIvy": true,
  "esModuleInterop": true,
  "experimentalDecorators": true,
  "forceConsistentCasingInFileNames": true,
  "importHelpers": true,
  "importsNotUsedAsValues": 2,
  "lib": Array [
    "lib.esnext.d.ts",
    "lib.dom.d.ts",
  ],
  "module": 1,
  "noFallthroughCasesInSwitch": true,
  "noImplicitReturns": true,
  "noUnusedLocals": true,
  "noUnusedParameters": true,
  "skipLibCheck": true,
  "strict": true,
  "target": 1,
  "types": Array [
    "node",
    "jest",
  ],
}
`;
